Valkore: - Add dependency to config

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,11 @@ description = Valkore module to create performant websites with Python 3.10
 interval = False
 autostart = False
 
+[Dependency]
+logger = *
+config = *
+database = *
+
 [Settings]
 host = 0.0.0.0
 port = 80
