--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [VKore]
 name = Web Operation Tool
 author = Valky Fischer
-version = 1.0.0
+version = 1.1.0
 description = Valkore module to create performant websites with Python 3.10
 interval = False
+interface = True
 autostart = False
 
 [Dependency]
