--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 name = Web Operation Tool
 author = Valky Fischer
 version = 1.1.3
-description = Valkore module to create performant websites with Python 3.10
+description = Valkore module to create a base website in Python
 interval = False
 interface = True
 autostart = False
